# baseball-sim-tui

./: .gitignore  README.md  play.sh  pyproject.toml  requirements.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/debug/: lahman-sqlite-build.md  terminus-ipad-question-marks.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
data/: .gitkeep
docs/adr/: 001-historical-schedule-data.md
scripts/: build_lahman_db.py  build_retro_aliases.py  build_roles.py  build_schedule_db.py
src/: __init__.py
src/data/: __init__.py  (+4 more)
tests/: __init__.py  test_advancement.py  test_at_bat.py  test_autoplay_e2e.py  test_batter_rest.py  test_box_score.py  test_build_context.py  test_choice_screen.py  test_data_layer.py  test_engine.py  test_fatigue.py  test_game_engine.py  test_game_loop.py  test_game_screen_lineup_plan.py  test_game_screen_restore.py  test_game_screen_save.py  test_game_screen_substitutions.py  test_global_quit.py  test_historical_setup_flow.py  test_historical_year_select_screen.py  test_lineup_builder.py  test_lineup_edit.py  test_lineup_edit_screen.py  test_load_resume_flow.py  test_manager_core.py  test_manager_decoupling.py  test_manager_tui_integration.py  test_narrative.py  test_odds_ratio.py  test_persistence.py  test_platoon_lineup_integration.py  test_rest_and_series.py  test_retro_team_aliases.py  test_role_card_pass.py  test_roles.py  test_save_select_screen.py  test_schedule_data.py  test_schedule_formats.py  test_schedule_ingest.py  test_schedule_ingest_pass.py  (+16 more)
(+159 files in other folders)
